2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:

	Make xml dir part of the build.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:

	Simplify code using the power of gupnp_service_signals_autoconnect().

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:

	Fix a small oops.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:

	Cleaner code for loading pixbufs.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:

	Add network-light icon to build.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>
2007-09-05  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	* src/Makefile.am:
	* src/gupnp-network-light.glade:
	* src/gupnp-universal-cp.glade:
	* src/network-light-gui.c:
	* src/network-light-gui.h:
	* src/network-light.c:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-gui.c:
	* src/universal-cp-icons.c:
	* src/universal-cp.c:
	* src/xml/Makefile.am:

	Install the xml files too and make network-light be able to run
	installed.

2007-09-04  Matthew Allum  <mallum@openedhand.com>

	* src/network-light-gui.c:
	
	Get light images from installed dir rather than local source dir.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/pixmaps/network-light.png:
	* src/xml/network-light-desc.xml:

	Add icon for window decorations and clients.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:
                
	Preserve the aspect-ratio of the original image.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Use icon types rather than icons to identify the treeview rows.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:

	Initialize label of the "On" menuitem only at startup and set it's state
	according to light-bulb status each time it pop's up.
