@@ -1,5 +1,11 @@
 2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>
 
+	* src/network-light.c:
+
+	Only host the dir where the description doc is found.
+
+2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>
+
 	* src/Makefile.am:
 
 	Make xml dir part of the build.
